Tools/testParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.7
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from test.g4 by ANTLR 4.7

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.7")]
[System.CLSCompliant(false)]
public partial class testParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28;
	public const int
		RULE_transformlist = 0, RULE_transforms = 1, RULE_transform = 2, RULE_matrix = 3, 
		RULE_translate = 4, RULE_scale = 5, RULE_rotate = 6, RULE_skewX = 7, RULE_skewY = 8, 
		RULE_number = 9, RULE_commawsp = 10, RULE_comma = 11, RULE_integer = 12, 
		RULE_float = 13, RULE_fraction = 14, RULE_exponent = 15, RULE_sign = 16, 
		RULE_digits = 17, RULE_digit = 18, RULE_wsp = 19;
	public static readonly string[] ruleNames = {
		"transformlist", "transforms", "transform", "matrix", "translate", "scale", 
		"rotate", "skewX", "skewY", "number", "commawsp", "comma", "integer", 
		"float", "fraction", "exponent", "sign", "digits", "digit", "wsp"
	};

	private static readonly string[] _LiteralNames = {
		null, "'matrix'", "'('", "')'", "'translate'", "'scale'", "'rotate'", 
		"'skewX'", "'skewY'", "','", "'.'", "'e'", "'E'", "'+'", "'-'", "'0'", 
		"'1'", "'2'", "'3'", "'4'", "'5'", "'6'", "'7'", "'8'", "'9'", "'\u0020'", 
		"'\u0009'", "'\u000D'", "'\u000A'"
	};
	private static readonly string[] _SymbolicNames = {
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "test.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static testParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public testParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public testParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}
	public partial class TransformlistContext : ParserRuleContext {
		public WspContext[] wsp() {
			return GetRuleContexts<WspContext>();
		}
		public WspContext wsp(int i) {
			return GetRuleContext<WspContext>(i);
		}
		public TransformsContext transforms() {
			return GetRuleContext<TransformsContext>(0);
		}
		public TransformlistContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_transformlist; } }
		public override void EnterRule(IParseTreeListener listener) {
			ItestListener typedListener = listener as ItestListener;
			if (typedListener != null) typedListener.EnterTransformlist(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ItestListener typedListener = listener as ItestListener;
			if (typedListener != null) typedListener.ExitTransformlist(this);
		}
	}

	[RuleVersion(0)]
	public TransformlistContext transformlist() {
		TransformlistContext _localctx = new TransformlistContext(Context, State);
		EnterRule(_localctx, 0, RULE_transformlist);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 43;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,0,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					State = 40; wsp();
					}
					} 
				}
				State = 45;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,0,Context);
			}
			State = 47;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__3) | (1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << T__7))) != 0)) {
				{
				State = 46; transforms();
				}
			}

			State = 52;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__24) | (1L << T__25) | (1L << T__26) | (1L << T__27))) != 0)) {
				{
				{
				State = 49; wsp();
				}
				}
				State = 54;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TransformsContext : ParserRuleContext {
		public TransformContext transform() {
			return GetRuleContext<TransformContext>(0);
		}
		public TransformsContext transforms() {
			return GetRuleContext<TransformsContext>(0);
		}
		public CommawspContext[] commawsp() {
			return GetRuleContexts<CommawspContext>();
		}
		public CommawspContext commawsp(int i) {
			return GetRuleContext<CommawspContext>(i);
		}
		public TransformsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_transforms; } }
		public override void EnterRule(IParseTreeListener listener) {
			ItestListener typedListener = listener as ItestListener;
			if (typedListener != null) typedListener.EnterTransforms(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ItestListener typedListener = listener as ItestListener;
			if (typedListener != null) typedListener.ExitTransforms(this);
		}
	}

	[RuleVersion(0)]
	public TransformsContext transforms() {
		TransformsContext _localctx = new TransformsContext(Context, State);
		EnterRule(_localctx, 2, RULE_transforms);
		int _la;
		try {
			State = 64;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,4,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 55; transform();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 56; transform();
				State = 58;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				do {
					{
					{
					State = 57; commawsp();
					}
					}
					State = 60;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__8) | (1L << T__24) | (1L << T__25) | (1L << T__26) | (1L << T__27))) != 0) );
				State = 62; transforms();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TransformContext : ParserRuleContext {
		public MatrixContext matrix() {
			return GetRuleContext<MatrixContext>(0);
		}
		public TranslateContext translate() {
			return GetRuleContext<TranslateContext>(0);
		}
		public ScaleContext scale() {
			return GetRuleContext<ScaleContext>(0);
		}
		public RotateContext rotate() {
			return GetRuleContext<RotateContext>(0);
		}
		public SkewXContext skewX() {
			return GetRuleContext<SkewXContext>(0);
		}
		public SkewYContext skewY() {
			return GetRuleContext<SkewYContext>(0);
		}
		public TransformContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_transform; } }
		public override void EnterRule(IParseTreeListener listener) {
			ItestListener typedListener = listener as ItestListener;
			if (typedListener != null) typedListener.EnterTransform(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ItestListener typedListener = listener as ItestListener;
			if (typedListener != null) typedListener.ExitTransform(this);
		}
	}

	[RuleVersion(0)]
	public TransformContext transform() {
		TransformContext _localctx = new TransformContext(Context, State);
		EnterRule(_localctx, 4, RULE_transform);
		try {
			State = 72;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__0:
				EnterOuterAlt(_localctx, 1);
				{
				State = 66; matrix();
				}
				break;
			case T__3:
				EnterOuterAlt(_localctx, 2);
				{
				State = 67; translate();
				}
				break;
			case T__4:
				EnterOuterAlt(_localctx, 3);
				{
				State = 68; scale();
				}
				break;
			case T__5:
				EnterOuterAlt(_localctx, 4);
				{
				State = 69; rotate();
				}
				break;
			case T__6:
				EnterOuterAlt(_localctx, 5);
				{
				State = 70; skewX();
				}
				break;
			case T__7:
				EnterOuterAlt(_localctx, 6);
				{
				State = 71; skewY();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class MatrixContext : ParserRuleContext {
		public NumberContext[] number() {
			return GetRuleContexts<NumberContext>();
		}
		public NumberContext number(int i) {
			return GetRuleContext<NumberContext>(i);
		}
		public CommawspContext[] commawsp() {
			return GetRuleContexts<CommawspContext>();
		}
		public CommawspContext commawsp(int i) {
			return GetRuleContext<CommawspContext>(i);
		}
		public WspContext[] wsp() {
			return GetRuleContexts<WspContext>();
		}
		public WspContext wsp(int i) {
			return GetRuleContext<WspContext>(i);
		}
		public MatrixContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_matrix; } }
		public override void EnterRule(IParseTreeListener listener) {
			ItestListener typedListener = listener as ItestListener;
			if (typedListener != null) typedListener.EnterMatrix(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ItestListener typedListener = listener as ItestListener;
			if (typedListener != null) typedListener.ExitMatrix(this);
		}
	}

	[RuleVersion(0)]
	public MatrixContext matrix() {
		MatrixContext _localctx = new MatrixContext(Context, State);
		EnterRule(_localctx, 6, RULE_matrix);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 74; Match(T__0);
			State = 78;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__24) | (1L << T__25) | (1L << T__26) | (1L << T__27))) != 0)) {
				{
				{
				State = 75; wsp();
				}
				}
				State = 80;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 81; Match(T__1);
			State = 85;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__24) | (1L << T__25) | (1L << T__26) | (1L << T__27))) != 0)) {
				{
				{
				State = 82; wsp();
				}
				}
				State = 87;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 88; number();
			State = 89; commawsp();
			State = 90; number();
			State = 91; commawsp();
			State = 92; number();
			State = 93; commawsp();
			State = 94; number();
			State = 95; commawsp();
			State = 96; number();
			State = 97; commawsp();
			State = 98; number();
			State = 102;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__24) | (1L << T__25) | (1L << T__26) | (1L << T__27))) != 0)) {
				{
				{
				State = 99; wsp();
				}
				}
				State = 104;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 105; Match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TranslateContext : ParserRuleContext {
		public NumberContext[] number() {
			return GetRuleContexts<NumberContext>();
		}
		public NumberContext number(int i) {
			return GetRuleContext<NumberContext>(i);
		}
		public WspContext[] wsp() {
			return GetRuleContexts<WspContext>();
		}
		public WspContext wsp(int i) {
			return GetRuleContext<WspContext>(i);
		}
		public CommawspContext commawsp() {
			return GetRuleContext<CommawspContext>(0);
		}
		public TranslateContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_translate; } }
		public override void EnterRule(IParseTreeListener listener) {
			ItestListener typedListener = listener as ItestListener;
			if (typedListener != null) typedListener.EnterTranslate(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ItestListener typedListener = listener as ItestListener;
			if (typedListener != null) typedListener.ExitTranslate(this);
		}
	}

	[RuleVersion(0)]
	public TranslateContext translate() {
		TranslateContext _localctx = new TranslateContext(Context, State);
		EnterRule(_localctx, 8, RULE_translate);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 107; Match(T__3);
			State = 111;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__24) | (1L << T__25) | (1L << T__26) | (1L << T__27))) != 0)) {
				{
				{
				State = 108; wsp();
				}
				}
				State = 113;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 114; Match(T__1);
			State = 118;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__24) | (1L << T__25) | (1L << T__26) | (1L << T__27))) != 0)) {
				{
				{
				State = 115; wsp();
				}
				}
				State = 120;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 121; number();
			State = 125;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,11,Context) ) {
			case 1:
				{
				State = 122; commawsp();
				State = 123; number();
				}
				break;
			}
			State = 130;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__24) | (1L << T__25) | (1L << T__26) | (1L << T__27))) != 0)) {
				{
				{
				State = 127; wsp();
				}
				}
				State = 132;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 133; Match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ScaleContext : ParserRuleContext {
		public NumberContext[] number() {
			return GetRuleContexts<NumberContext>();
		}
		public NumberContext number(int i) {
			return GetRuleContext<NumberContext>(i);
		}
		public WspContext[] wsp() {
			return GetRuleContexts<WspContext>();
		}
		public WspContext wsp(int i) {
			return GetRuleContext<WspContext>(i);
		}
		public CommawspContext commawsp() {
			return GetRuleContext<CommawspContext>(0);
		}
		public ScaleContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_scale; } }
		public override void EnterRule(IParseTreeListener listener) {
			ItestListener typedListener = listener as ItestListener;
			if (typedListener != null) typedListener.EnterScale(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ItestListener typedListener = listener as ItestListener;
			if (typedListener != null) typedListener.ExitScale(this);
		}
	}

	[RuleVersion(0)]
	public ScaleContext scale() {
		ScaleContext _localctx = new ScaleContext(Context, State);
		EnterRule(_localctx, 10, RULE_scale);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 135; Match(T__4);
			State = 139;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__24) | (1L << T__25) | (1L << T__26) | (1L << T__27))) != 0)) {
				{
				{
				State = 136; wsp();
				}
				}
				State = 141;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 142; Match(T__1);
			State = 146;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__24) | (1L << T__25) | (1L << T__26) | (1L << T__27))) != 0)) {
				{
				{
				State = 143; wsp();
				}
				}
				State = 148;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 149; number();
			State = 153;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,15,Context) ) {
			case 1:
				{
				State = 150; commawsp();
				State = 151; number();
				}
				break;
			}
			State = 158;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__24) | (1L << T__25) | (1L << T__26) | (1L << T__27))) != 0)) {
				{
				{
				State = 155; wsp();
				}
				}
				State = 160;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 161; Match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class RotateContext : ParserRuleContext {
		public NumberContext[] number() {
			return GetRuleContexts<NumberContext>();
		}
		public NumberContext number(int i) {
			return GetRuleContext<NumberContext>(i);
		}
		public WspContext[] wsp() {
			return GetRuleContexts<WspContext>();
		}
		public WspContext wsp(int i) {
			return GetRuleContext<WspContext>(i);
		}
		public CommawspContext[] commawsp() {
			return GetRuleContexts<CommawspContext>();
		}
		public CommawspContext commawsp(int i) {
			return GetRuleContext<CommawspContext>(i);
		}
		public RotateContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_rotate; } }
		public override void EnterRule(IParseTreeListener listener) {
			ItestListener typedListener = listener as ItestListener;
			if (typedListener != null) typedListener.EnterRotate(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ItestListener typedListener = listener as ItestListener;
			if (typedListener != null) typedListener.ExitRotate(this);
		}
	}

	[RuleVersion(0)]
	public RotateContext rotate() {
		RotateContext _localctx = new RotateContext(Context, State);
		EnterRule(_localctx, 12, RULE_rotate);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 163; Match(T__5);
			State = 167;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__24) | (1L << T__25) | (1L << T__26) | (1L << T__27))) != 0)) {
				{
				{
				State = 164; wsp();
				}
				}
				State = 169;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 170; Match(T__1);
			State = 174;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__24) | (1L << T__25) | (1L << T__26) | (1L << T__27))) != 0)) {
				{
				{
				State = 171; wsp();
				}
				}
				State = 176;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 177; number();
			State = 183;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,19,Context) ) {
			case 1:
				{
				State = 178; commawsp();
				State = 179; number();
				State = 180; commawsp();
				State = 181; number();
				}
				break;
			}
			State = 188;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__24) | (1L << T__25) | (1L << T__26) | (1L << T__27))) != 0)) {
				{
				{
				State = 185; wsp();
				}
				}
				State = 190;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 191; Match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SkewXContext : ParserRuleContext {
		public NumberContext number() {
			return GetRuleContext<NumberContext>(0);
		}
		public WspContext[] wsp() {
			return GetRuleContexts<WspContext>();
		}
		public WspContext wsp(int i) {
			return GetRuleContext<WspContext>(i);
		}
		public SkewXContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_skewX; } }
		public override void EnterRule(IParseTreeListener listener) {
			ItestListener typedListener = listener as ItestListener;
			if (typedListener != null) typedListener.EnterSkewX(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ItestListener typedListener = listener as ItestListener;
			if (typedListener != null) typedListener.ExitSkewX(this);
		}
	}

	[RuleVersion(0)]
	public SkewXContext skewX() {
		SkewXContext _localctx = new SkewXContext(Context, State);
		EnterRule(_localctx, 14, RULE_skewX);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 193; Match(T__6);
			State = 197;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__24) | (1L << T__25) | (1L << T__26) | (1L << T__27))) != 0)) {
				{
				{
				State = 194; wsp();
				}
				}
				State = 199;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 200; Match(T__1);
			State = 204;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__24) | (1L << T__25) | (1L << T__26) | (1L << T__27))) != 0)) {
				{
				{
				State = 201; wsp();
				}
				}
				State = 206;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 207; number();
			State = 211;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__24) | (1L << T__25) | (1L << T__26) | (1L << T__27))) != 0)) {
				{
				{
				State = 208; wsp();
				}
				}
				State = 213;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 214; Match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SkewYContext : ParserRuleContext {
		public NumberContext number() {
			return GetRuleContext<NumberContext>(0);
		}
		public WspContext[] wsp() {
			return GetRuleContexts<WspContext>();
		}
		public WspContext wsp(int i) {
			return GetRuleContext<WspContext>(i);
		}
		public SkewYContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_skewY; } }
		public override void EnterRule(IParseTreeListener listener) {
			ItestListener typedListener = listener as ItestListener;
			if (typedListener != null) typedListener.EnterSkewY(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ItestListener typedListener = listener as ItestListener;
			if (typedListener != null) typedListener.ExitSkewY(this);
		}
	}

	[RuleVersion(0)]
	public SkewYContext skewY() {
		SkewYContext _localctx = new SkewYContext(Context, State);
		EnterRule(_localctx, 16, RULE_skewY);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 216; Match(T__7);
			State = 220;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__24) | (1L << T__25) | (1L << T__26) | (1L << T__27))) != 0)) {
				{
				{
				State = 217; wsp();
				}
				}
				State = 222;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 223; Match(T__1);
			State = 227;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__24) | (1L << T__25) | (1L << T__26) | (1L << T__27))) != 0)) {
				{
				{
				State = 224; wsp();
				}
				}
				State = 229;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 230; number();
			State = 234;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__24) | (1L << T__25) | (1L << T__26) | (1L << T__27))) != 0)) {
				{
				{
				State = 231; wsp();
				}
				}
				State = 236;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 237; Match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class NumberContext : ParserRuleContext {
		public IntegerContext integer() {
			return GetRuleContext<IntegerContext>(0);
		}
		public SignContext sign() {
			return GetRuleContext<SignContext>(0);
		}
		public FloatContext @float() {
			return GetRuleContext<FloatContext>(0);
		}
		public NumberContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_number; } }
		public override void EnterRule(IParseTreeListener listener) {
			ItestListener typedListener = listener as ItestListener;
			if (typedListener != null) typedListener.EnterNumber(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ItestListener typedListener = listener as ItestListener;
			if (typedListener != null) typedListener.ExitNumber(this);
		}
	}

	[RuleVersion(0)]
	public NumberContext number() {
		NumberContext _localctx = new NumberContext(Context, State);
		EnterRule(_localctx, 18, RULE_number);
		int _la;
		try {
			State = 247;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,29,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 240;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==T__12 || _la==T__13) {
					{
					State = 239; sign();
					}
				}

				State = 242; integer();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 244;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==T__12 || _la==T__13) {
					{
					State = 243; sign();
					}
				}

				State = 246; @float();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CommawspContext : ParserRuleContext {
		public WspContext[] wsp() {
			return GetRuleContexts<WspContext>();
		}
		public WspContext wsp(int i) {
			return GetRuleContext<WspContext>(i);
		}
		public CommaContext comma() {
			return GetRuleContext<CommaContext>(0);
		}
		public CommawspContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_commawsp; } }
		public override void EnterRule(IParseTreeListener listener) {
			ItestListener typedListener = listener as ItestListener;
			if (typedListener != null) typedListener.EnterCommawsp(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ItestListener typedListener = listener as ItestListener;
			if (typedListener != null) typedListener.ExitCommawsp(this);
		}
	}
